samples/_failures_safe/1761294784_96f83b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a931c501.c: In function ‘main’:
./samples/SAFE/__tmp_a931c501.c:175:9: error: expected declaration or statement at end of input
  175 |         printf(": '%s'\n", tokens[i].value);
      |         ^~~~~~
./samples/SAFE/__tmp_a931c501.c:175:9: error: expected declaration or statement at end of input
